Fix critical enable/disable bug and complete localization (v1.2.1)
- Fix enable/disable monitor toggle not working for programs disabled at launch
- Subscribe PropertyChanged handlers for existing programs in Start()
- Add missing localization keys to all 16 language files
- Localize 5 remaining English log messages in Services.cs
- Update CHANGELOG.md and version to 1.2.1

--- a/Localization/cn.json
+++ b/Localization/cn.json
@@ -128,6 +128,11 @@
   "Log.RestartFailed": "程序重新启动失败：{0}",
   "Log.ProcessNotFound": "未找到进程：{0}",
   "Log.ProcessRunning": "进程正在运行：{0}",
+  "Log.ProgramNotRunning": "{0} 未运行。将在 {1} 秒后重启...",
+  "Log.ErrorMonitoring": "监控 {0} 时出错：{1}",
+  "Log.ErrorCheckingProcess": "检查 {0} 是否正在运行时出错：{1}",
+  "Log.SuccessfullyRestarted": "成功重启了 {0}",
+  "Log.FailedToRestart": "重启 {0} 失败：{1}",
 
   "Email.Subject.Restart": "RestartIt：程序已重新启动 - {0}",
   "Email.Subject.Failed": "RestartIt：重新启动失败 - {0}",
