--- a/Localization/ja.json
+++ b/Localization/ja.json
@@ -128,6 +128,11 @@
   "Log.RestartFailed": "プログラムの再起動に失敗しました: {0}",
   "Log.ProcessNotFound": "プロセスが見つかりません: {0}",
   "Log.ProcessRunning": "プロセスが実行中です: {0}",
+  "Log.ProgramNotRunning": "{0} は実行されていません。{1} 秒後に再起動します...",
+  "Log.ErrorMonitoring": "{0} の監視中にエラーが発生しました: {1}",
+  "Log.ErrorCheckingProcess": "{0} が実行されているか確認中にエラーが発生しました: {1}",
+  "Log.SuccessfullyRestarted": "{0} の再起動に成功しました",
+  "Log.FailedToRestart": "{0} の再起動に失敗しました: {1}",
 
   "Email.Subject.Restart": "RestartIt: プログラムが再起動しました - {0}",
   "Email.Subject.Failed": "RestartIt: 再起動に失敗しました - {0}",
