--- a/Localization/ko.json
+++ b/Localization/ko.json
@@ -128,6 +128,11 @@
   "Log.RestartFailed": "프로그램 재시작 실패: {0}",
   "Log.ProcessNotFound": "프로세스를 찾을 수 없음: {0}",
   "Log.ProcessRunning": "프로세스 실행 중: {0}",
+  "Log.ProgramNotRunning": "{0}이(가) 실행되지 않습니다. {1}초 후에 재시작합니다...",
+  "Log.ErrorMonitoring": "{0} 모니터링 중 오류 발생: {1}",
+  "Log.ErrorCheckingProcess": "{0}이(가) 실행 중인지 확인하는 중 오류 발생: {1}",
+  "Log.SuccessfullyRestarted": "{0}을(를) 성공적으로 재시작했습니다",
+  "Log.FailedToRestart": "{0} 재시작 실패: {1}",
 
   "Email.Subject.Restart": "RestartIt: 프로그램 재시작 - {0}",
   "Email.Subject.Failed": "RestartIt: 재시작 실패 - {0}",
