--- a/Localization/en.json
+++ b/Localization/en.json
@@ -33,6 +33,7 @@
   "Status.Unknown": "Unknown",
 
   "Dialog.SelectProgram": "Select Program to Monitor",
+  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
   "Dialog.ConfirmRemoval": "Confirm Removal",
   "Dialog.RemoveQuestion": "Are you sure you want to remove '{0}' from monitoring?",
   "Dialog.NoSelection": "No Selection",
@@ -54,10 +55,12 @@
   "ProgramEdit.CheckInterval": "Check Interval (seconds):",
   "ProgramEdit.RestartDelay": "Restart Delay (seconds):",
   "ProgramEdit.ValidationError": "Validation Error",
-  "ProgramEdit.ProgramNameRequired": "Program name is required.",
+  "ProgramEdit.ProgramNameRequired": "Please enter a program name.",
   "ProgramEdit.InvalidPath": "Please select a valid executable file.",
-  "ProgramEdit.InvalidInterval": "Check interval must be at least 5 seconds.",
-  "ProgramEdit.InvalidDelay": "Restart delay must be at least 1 second.",
+  "ProgramEdit.InvalidInterval": "Check interval must be a positive number.",
+  "ProgramEdit.InvalidDelay": "Restart delay must be zero or a positive number.",
+  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
+  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
 
   "Settings.Title": "Settings",
   "Settings.Logging": "Logging",
@@ -67,6 +70,7 @@
 
   "Settings.Logging.EnableFileLogging": "Enable File Logging",
   "Settings.Logging.LogFilePath": "Log File Path:",
+  "Settings.Logging.LogFileDirectory": "Log File Directory:",
   "Settings.Logging.MinLogLevel": "Minimum Log Level:",
   "Settings.Logging.MaxFileSize": "Max Log File Size (MB):",
   "Settings.Logging.KeepLogsFor": "Keep Log Files For (days):",
@@ -86,6 +90,13 @@
   "Settings.Email.TestSuccess": "Test Email Sent",
   "Settings.Email.TestSuccessMessage": "Test email sent successfully! Check your inbox.",
   "Settings.Email.TestError": "Email Test Failed",
+  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
+  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
+  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
+  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
+  "Settings.Email.TestSubject": "Test Email from RestartIt",
+  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
+  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
 
   "Settings.App.StartWithWindows": "Start with Windows",
   "Settings.App.StartWithWindowsDesc": "Automatically start RestartIt when Windows starts.",
@@ -132,6 +143,23 @@
   "Log.ErrorCheckingProcess": "Error checking if {0} is running: {1}",
   "Log.SuccessfullyRestarted": "Successfully restarted {0}",
   "Log.FailedToRestart": "Failed to restart {0}: {1}",
+  "Log.ValidationFailed": "Cannot restart {0}: {1}",
+  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
+  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
+
+  "Validation.ExecutablePathRequired": "Executable path is required.",
+  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
+  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
+  "Validation.FileNotFound": "The executable file does not exist.",
+  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
+  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
+  "Validation.InvalidPathFormat": "The path format is invalid.",
+  "Validation.PathNotSupported": "The path format is not supported.",
+  "Validation.PathValidationError": "Error validating path: {0}",
+  "Validation.DirectoryNotFound": "The working directory does not exist.",
+  "Validation.DirectoryValidationError": "Error validating directory: {0}",
+  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
+  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
 
   "Email.Subject.Restart": "RestartIt: Program Restarted - {0}",
   "Email.Subject.Failed": "RestartIt: Restart Failed - {0}",
